Add support for industries table
